home button fixed on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -263,7 +263,7 @@ header div {
 /*************** home ****************/
 
 .home-header {
-  height: 60vh;
+  min-height: 60vh;
   position: relative;
 }
 .details {
@@ -327,6 +327,9 @@ header div {
   margin-bottom: 2rem;
 }
 @media (max-width: 992px) {
+  .home-header button {
+    margin-bottom: 1rem;
+  }
   .contact-form {
     align-items: center;
     flex-direction: column;
